--- a/templates/actor/tab/boons.html
+++ b/templates/actor/tab/boons.html
@@ -1,7 +1,7 @@
 <div class="boons-tab">
     {{#if unlocked}}
     <h1>
-        <a class="item-create" data-type="boon" title="{{localize "cleenmain.boon.add"}}">
+        <a class="item-create" data-type="boon" title='{{localize "CLEENMAIN.boon.add"}}'>
             <i class="fas fa-plus"></i>
         </a>
     </h1>
@@ -20,10 +20,10 @@
                 <div class="boon-name">{{item.name}}</div>
                 {{#if ../unlocked}}
                 <div class="icon-group">
-                    <a class="item-open-sheet" data-type="boon" data-id="{{item.id}}" title="{{localize "cleenmain.sheet.edit"}}">
+                    <a class="item-open-sheet" data-type="boon" data-id="{{item.id}}" title="{{localize "CLEENMAIN.sheet.edit"}}">
                         <i class="fas fa-pen"></i>
                     </a>
-                    <a class="inline-delete" data-type="boon" data-id="{{item.id}}" title="{{localize "cleenmain.sheet.delete"}}">
+                    <a class="inline-delete" data-type="boon" data-id="{{item.id}}" title="{{localize "CLEENMAIN.sheet.delete"}}">
                         <i class="fas fa-trash"></i>
                     </a>
                 </div>
@@ -32,7 +32,7 @@
             <div class="boon-description">{{{item.data.data.description}}}</div>
             {{#if item.data.data.limitedUse}}
             <div class="boon-used-line">
-                <label for="item.data.data.used">{{localize "cleenmain.boon.used"}}</label>
+                <label for="item.data.data.used">{{localize "CLEENMAIN.boon.used"}}</label>
                 <input class="checkbox inline-edit" data-field="data.used" id="{{item.id}}" name="item.data.data.used" type="checkbox" {{checked item.data.data.used}}>
                 
             </div>
