--- a/templates/chat/rollResult.html
+++ b/templates/chat/rollResult.html
@@ -8,11 +8,11 @@
         <div class="modifierText">{{mod}}</div>
         {{/each}}
         <div class="formulaText">
-            {{localize "cleenmain.chatmessage.rollformula"}}  {{skillData.skillRollFormula}}
+            {{localize "CLEENMAIN.chatmessage.rollformula"}}  {{skillData.skillRollFormula}}
         </div>
         <div class="finalText">
             <div class="tooltip">
-                <p>{{localize "cleenmain.chatmessage.rollresult"}} {{skillData.skillRoll.total}}</p>
+                <p>{{localize "CLEENMAIN.chatmessage.rollresult"}} {{skillData.skillRoll.total}}</p>
                 <span class="tooltiptext">{{skillData.tooltip}}</span>
             </div>
         </div>
