--- a/templates/item/armor.html
+++ b/templates/item/armor.html
@@ -6,11 +6,11 @@
     <div class="sheet-content">
         <table>
             <tr>
-                <th>{{localize "cleenmain.label.category"}}</th>
-                <th>{{localize "cleenmain.armor.protection"}}</th>
-                <th>{{localize "cleenmain.armor.malus"}}</th>
-                <th>{{localize "cleenmain.armor.special"}}</th>
-                <th>{{localize "cleenmain.armor.quality"}}</th>
+                <th>{{localize "CLEENMAIN.label.category"}}</th>
+                <th>{{localize "CLEENMAIN.armor.protection"}}</th>
+                <th>{{localize "CLEENMAIN.armor.malus"}}</th>
+                <th>{{localize "CLEENMAIN.armor.special"}}</th>
+                <th>{{localize "CLEENMAIN.armor.quality"}}</th>
             </tr>
             <td>
                 <select name="data.category">
@@ -35,7 +35,7 @@
             </td>
             </table>
             
-            <div class="description">{{localize "cleenmain.label.description"}}</div>
+            <div class="description">{{localize "CLEENMAIN.label.description"}}</div>
             {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
     </div>
 </form>
