--- a/templates/item/boon.html
+++ b/templates/item/boon.html
@@ -5,11 +5,11 @@
     <div class="sheet-content">
         <div class="boon-line">
             <div class="boon-block">
-                <div class="label-dev">{{localize "cleenmain.boon.developedinfo"}}</div>
+                <div class="label-dev">{{localize "CLEENMAIN.boon.developedinfo"}}</div>
                 <input class="checkbox" name="data.developed" type="checkbox" {{checked data.developed}}>
             </div>
             <div class="boon-block">
-                <div class="label-dev">{{localize "cleenmain.boon.limiteduseinfo"}}</div>
+                <div class="label-dev">{{localize "CLEENMAIN.boon.limiteduseinfo"}}</div>
                 <input class="checkbox" name="data.limitedUse" type="checkbox" {{checked data.limitedUse}}>
             </div>
         </div>
