--- a/templates/partials/boon-card.html
+++ b/templates/partials/boon-card.html
@@ -1,7 +1,7 @@
 <div class="boon-card">
     <a class="item-edit">
         <div class="boon-header item" data-item-id="{{item.id}}">
-            <p>{{localize "cleenmain.label.boon"}}</p>
+            <p>{{localize "CLEENMAIN.label.boon"}}</p>
         </div>
             <div class="boon-name-line">
                 <input class="checkbox inline-edit" data-field="data.developed" id="{{id}}" name="item.data.data.developed" type="checkbox" {{checked item.data.data.developed}}>
