--- a/less/player-sheet.less
+++ b/less/player-sheet.less
@@ -38,6 +38,8 @@
         .leftcolumn {
             display: flex;
             flex-direction: column;
+            min-width: 200px;
+            margin-right: 20px;
             .title-line{
                 display: flex;
                 flex-direction: row;
