--- a/templates/actor/player.html
+++ b/templates/actor/player.html
@@ -2,9 +2,9 @@
     <div class="main">
         <div class="leftcolumn">
             <div class="title-line">
-                <h1><div class="column-title">{{localize "cleenmain.label.skills"}}</div></h1>
+                <h1><div class="column-title">{{localize "CLEENMAIN.label.skills"}}</div></h1>
                 {{#if unlocked}}
-                    <a class="item-create right-icon" data-type="skill" title="{{localize "cleenmain.skill.add"}}"><i class="fas fa-plus"></i></a>
+                    <a class="item-create right-icon" data-type="skill" title="{{localize "CLEENMAIN.skill.add"}}"><i class="fas fa-plus"></i></a>
                 {{/if}}
             </div>
             {{#if unlocked}}
@@ -14,7 +14,7 @@
                             <input class="inline-edit skill-name" data-field="name" id="{{id}}" type="text" value="{{skill.name}}" data-dtype="Text"/>
                             <input class="inline-edit skill-value" data-field="data.base" id="{{id}}" type="number" name="skill.data.base" value="{{skill.data.data.base}}" data-dtype="Number" />
                             <input class="inline-edit skill-dev checkbox" data-field="data.developed" id="{{id}}" name="skill.data.developed" type="checkbox" {{checked skill.data.data.developed}}>
-                            <a class="inline-delete" data-type="skill" data-id="{{id}}" title="{{localize 'cleenmain.skill.delete'}}"><i class="fas fa-trash"></i></a>
+                            <a class="inline-delete" data-type="skill" data-id="{{id}}" title="{{localize 'CLEENMAIN.skill.delete'}}"><i class="fas fa-trash"></i></a>
                         </div>
                     {{/each}}
                 </div>
@@ -37,10 +37,10 @@
                 <img src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="150" width="100"/>
                 <div class="intro-block-right">
                     <div class="central-line">
-                        <div class="name-text">{{localize "cleenmain.label.character"}} :</div>
+                        <div class="name-text">{{localize "CLEENMAIN.label.character"}} :</div>
                         <input name="name" type="text" value="{{actor.name}}" placeholder="Name"/>
                         <div class="right-icon">
-                            <a class="sheet-unlock" title="{{localize "cleenmain.label.unlock_sheet"}}">
+                            <a class="sheet-unlock" title="{{localize "CLEENMAIN.label.unlock_sheet"}}">
                                 {{#if unlocked}}
                                 <i class="fas fa-lock-open"></i>
                                 {{else}}
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                     <div class="central-line">
-                        <div class="name-text">{{localize "cleenmain.label.activity"}} :</div>
+                        <div class="name-text">{{localize "CLEENMAIN.label.activity"}} :</div>
                         {{#if unlocked}}
                         <input id="activity" name="data.activity" type="text" value="{{data.activity}}" />
                         {{else}}
@@ -59,17 +59,17 @@
                     </div>
                     <div class="central-line space-between">
                         <div class="health-block">
-                            <div class="health-text">{{localize "cleenmain.label.health"}} :</div>
-                                <input class="health-input" title="{{localize "cleenmain.health.current"}}" id="health" name="data.health.value" type="number" value="{{data.health.value}}"/>
+                            <div class="health-text">{{localize "CLEENMAIN.label.health"}} :</div>
+                                <input class="health-input" title="{{localize "CLEENMAIN.health.current"}}" id="health" name="data.health.value" type="number" value="{{data.health.value}}"/>
                                 <div class="central-text">/</div>
                                 {{#if unlocked}}
-                                    <input title="{{localize "cleenmain.health.max"}}" id="health" name="data.health.max" type="number" value="{{data.health.max}}"/>
+                                    <input title="{{localize "CLEENMAIN.health.max"}}" id="health" name="data.health.max" type="number" value="{{data.health.max}}"/>
                                 {{else}}
                                 <div class="central-text">{{data.health.max}}</div>
                                 {{/if}}
                         </div>
                             <div class="blessure-block">
-                                <div class="blessure-text">{{localize "cleenmain.label.wounds"}} :</div>
+                                <div class="blessure-text">{{localize "CLEENMAIN.label.wounds"}} :</div>
                                 <select id="blessure" name="data.blessure">
                                     {{#select data.blessure}}
                                     <option value="0">0</option>
@@ -82,12 +82,12 @@
                             </div>
                     </div>
                     <div class="central-line">
-                            <div class="heroism-text">{{localize "cleenmain.label.heroism"}}:</div>
+                            <div class="heroism-text">{{localize "CLEENMAIN.label.heroism"}}:</div>
                             <div class="input-heroism">
-                                <input title="{{localize "cleenmain.heroism.current"}}" id="heroism" name="data.heroism.value" type="number" value="{{data.heroism.value}}"/>
+                                <input title="{{localize "CLEENMAIN.heroism.current"}}" id="heroism" name="data.heroism.value" type="number" value="{{data.heroism.value}}"/>
                                 <div class="central-text">/</div>
                                 {{#if unlocked}}
-                                <input title="{{localize "cleenmain.heroism.max"}}" id="heroismmax" name="data.heroism.max" type="number" value="{{data.heroism.max}}"/>
+                                <input title="{{localize "CLEENMAIN.heroism.max"}}" id="heroismmax" name="data.heroism.max" type="number" value="{{data.heroism.max}}"/>
                                 {{else}}
                                 <div class="central-text">{{data.heroism.max}}</div>
                                 {{/if}}
@@ -97,15 +97,15 @@
             </div>
 
             <div class="sheet-tabs tabs" data-group="primary">
-                <b class="actor" data-tab="combat">{{localize "cleenmain.sheet.tab.combat"}}</b>
-                <b class="actor" data-tab="boons">{{localize "cleenmain.sheet.tab.boons"}}</b>
-                <b class="actor" data-tab="equipment">{{localize "cleenmain.sheet.tab.equipment"}}</b>
-                <b class="actor" data-tab="bio">{{localize "cleenmain.sheet.tab.bio"}}</b>
-                <b class="actor" data-tab="notes">{{localize "cleenmain.sheet.tab.notes"}}</b>
+                <b class="actor" data-tab="combat">{{localize "CLEENMAIN.sheet.tab.combat"}}</b>
+                <b class="actor" data-tab="boons">{{localize "CLEENMAIN.sheet.tab.boons"}}</b>
+                <b class="actor" data-tab="equipment">{{localize "CLEENMAIN.sheet.tab.equipment"}}</b>
+                <b class="actor" data-tab="bio">{{localize "CLEENMAIN.sheet.tab.bio"}}</b>
+                <b class="actor" data-tab="notes">{{localize "CLEENMAIN.sheet.tab.notes"}}</b>
             </div>
     
             <div class="sheet-body">
-                <div class="tab combat-tab" data-group="primary" data-tab="combat">{{> systems/cleenmain/templates/actor/tab/combat.html}}</div>
+                <div class="tab" data-group="primary" data-tab="combat">{{> systems/cleenmain/templates/actor/tab/combat.html}}</div>
                 <div class="tab" data-group="primary" data-tab="boons">{{> systems/cleenmain/templates/actor/tab/boons.html}}</div>
                 <div class="tab" data-group="primary" data-tab="equipment">{{> systems/cleenmain/templates/actor/tab/equipment.html}}</div>
                 <div class="tab" data-group="primary" data-tab="bio">{{> systems/cleenmain/templates/actor/tab/bio.html}}</div>
