--- a/templates/actor/tab/equipment.html
+++ b/templates/actor/tab/equipment.html
@@ -1,8 +1,8 @@
 <div class="equipment-tab">
     <div class="title-line">
-        <h1><div class="column-title">{{localize "cleenmain.label.equipment"}}</div></h1>
+        <h1><div class="column-title">{{localize "CLEENMAIN.label.equipment"}}</div></h1>
         {{#if unlocked}}
-        <a class="item-create right-icon" data-type="equipment" title="{{localize "cleenmain.equipment.add"}}">
+        <a class="item-create right-icon" data-type="equipment" title="{{localize "CLEENMAIN.equipment.add"}}">
                 <i class="fas fa-plus"></i>
         </a>
         {{/if}}
@@ -13,10 +13,10 @@
             <div class="equipment-name">{{item.name}}</div>
             {{#if ../unlocked}}
             <div class="icon-group">
-                <a class="item-open-sheet" data-type="equipment" data-id="{{item.id}}" title="{{localize "cleenmain.sheet.edit"}}">
+                <a class="item-open-sheet" data-type="equipment" data-id="{{item.id}}" title="{{localize "CLEENMAIN.sheet.edit"}}">
                     <i class="fas fa-pen"></i>
                 </a>
-                <a class="inline-delete" data-type="equipment" data-id="{{item.id}}" title="{{localize "cleenmain.sheet.delete"}}">
+                <a class="inline-delete" data-type="equipment" data-id="{{item.id}}" title="{{localize "CLEENMAIN.sheet.delete"}}">
                     <i class="fas fa-trash"></i>
                 </a>
             </div>
